[gd_scene load_steps=10 format=3 uid="uid://c8ontq3hxop3j"]

[ext_resource type="Script" path="res://combat/combat_enemy_template.gd" id="1_orlu5"]
[ext_resource type="Texture2D" uid="uid://ds4ca0rsev4uy" path="res://ai_ship.png" id="2_3wtjd"]
[ext_resource type="Texture2D" uid="uid://dwrj41hho13h" path="res://Assets/Images/anchor.png" id="3_nbjmj"]
[ext_resource type="PackedScene" uid="uid://coa286iw0bqab" path="res://combat/cannon_controller.tscn" id="5_c2erk"]
[ext_resource type="Texture2D" uid="uid://6kq13j2y4s6d" path="res://Assets/Images/Progress Bars/healthprog2.png" id="5_urjie"]
[ext_resource type="Texture2D" uid="uid://nl4h6ub6vhqo" path="res://Assets/Images/Progress Bars/healthred.png" id="6_qske0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o3u34"]
radius = 20.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obrqm"]
size = Vector2(8, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_113fh"]
size = Vector2(8, 85)

[node name="CombatEnemyTemplate" type="Node2D"]
script = ExtResource("1_orlu5")

[node name="Actual_Ship" type="CharacterBody2D" parent="."]
z_index = 5
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Actual_Ship"]
scale = Vector2(5, 5)
texture = ExtResource("2_3wtjd")

[node name="Anchor" type="Sprite2D" parent="Actual_Ship/Sprite2D"]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_nbjmj")

[node name="Actual_Ship_Hitbox" type="CollisionShape2D" parent="Actual_Ship"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_o3u34")

[node name="Detection_Right" type="Area2D" parent="Actual_Ship"]
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actual_Ship/Detection_Right"]
position = Vector2(-425, 0)
rotation = 1.5708
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_obrqm")

[node name="Detection_Left" type="Area2D" parent="Actual_Ship"]
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actual_Ship/Detection_Left"]
position = Vector2(425, 0)
rotation = 1.5708
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_113fh")

[node name="CannonsRight" type="Node2D" parent="Actual_Ship"]

[node name="CannonsLeft" type="Node2D" parent="Actual_Ship"]

[node name="CannonController" parent="Actual_Ship" instance=ExtResource("5_c2erk")]
rotation = 3.14159

[node name="HealthBar" type="TextureProgressBar" parent="."]
z_index = 1
offset_left = -50.0
offset_top = 60.0
offset_bottom = 67.0
scale = Vector2(2, 2)
value = 100.0
texture_progress = ExtResource("5_urjie")

[node name="DamageBar" type="TextureProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 0
offset_right = 50.0
offset_bottom = 7.0
value = 100.0
texture_progress = ExtResource("6_qske0")

[connection signal="area_entered" from="Actual_Ship/Detection_Right" to="." method="_on_range_entered_right"]
[connection signal="area_exited" from="Actual_Ship/Detection_Right" to="." method="_on_range_exited"]
[connection signal="area_entered" from="Actual_Ship/Detection_Left" to="." method="_on_range_entered_left"]
[connection signal="area_exited" from="Actual_Ship/Detection_Left" to="." method="_on_range_exited"]
